--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
     "@ngneat/tailwind": "^7.0.3",
+    "@ngrx/effects": "^12.0.0",
+    "@ngrx/entity": "^12.0.0",
+    "@ngrx/store": "^12.0.0",
+    "@ngrx/store-devtools": "^12.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
