feat: :sparkles: add loader, clients table

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@ngrx/entity": "^12.0.0",
     "@ngrx/store": "^12.0.0",
     "@ngrx/store-devtools": "^12.0.0",
+    "lottie-web": "^5.7.8",
+    "ngx-lottie": "^6.4.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
