--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lottie-web": "^5.7.8",
     "ngx-lottie": "^6.4.0",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.0.9",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
