--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ngrx/store": "^12.0.0",
     "@ngrx/store-devtools": "^12.0.0",
     "lottie-web": "^5.7.8",
+    "ng-qrcode": "4.2.0",
     "ngx-lottie": "^6.4.0",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.0.9",
