--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "d67c417e-a81e-4ddf-9ae1-fb5751127c53"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
